--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -7,6 +7,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: abystoma/external-workflow
-          ref: 3eb718710f20d7df6874acdc41e189a2ae4182f5
+          ref: branch
       - name: Greetings
-        run: echo "$(<greeting.txt)"
+        run: echo "$(<greetings.txt)"
+
