--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -1,10 +1,12 @@
-name: State validations
+name: RUNNER
 on: push
 jobs:
-  validate:
+  if-Windows-else:
     runs-on: ubuntu-latest
     steps:
-      - id: generator
-        run: if [[ $((RANDOM % 2)) == 0 ]]; then exit 0; else exit 1; fi
-      - if: ${{ always() }}
-        run: echo ${{ steps.generator.outcome }}
+      - name: condition 1
+        if: runner.os == 'Windows'
+        run: echo "The operating system on the runner is $env:RUNNER_OS."
+      - name: condition 2
+        if: runner.os != 'Windows'
+        run: echo "The operating system on the runner is not Windows, it's $RUNNER_OS."
