--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -1,12 +1,14 @@
-name: RUNNER
-on: push
+name: Build and Deploy
+on:
+  status: [success, failure]
 jobs:
-  if-Windows-else:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: condition 1
-        if: runner.os == 'Windows'
-        run: echo "The operating system on the runner is $env:RUNNER_OS."
-      - name: condition 2
-        if: runner.os != 'Windows'
-        run: echo "The operating system on the runner is not Windows, it's $RUNNER_OS."
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Build app
+        run: npm build
+      - name: Deploy app
+        if: success()
+        run: npm deploy
