--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -2,7 +2,7 @@ name: Check Run Workflow
 on:
   check_run:
     types:
-      - completed
+      - requested_action
 
 jobs:
   build:
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Run Tests
         run: |
